# Matrix-Magiq-NRSH

./: .gitignore  Cargo.toml  GRANT_PROPOSAL_REPORT.md  README.md  Setup-LuaWin.ps1  backup_to_onedrive.py  build.rs  fix_parachain_repos.ps1  launch_matrix_magiq.ps1  launch_nrsh_standalone.ps1  launch_parachains.ps1  parachain-integration.rs  start_chains_monorepo.ps1  verify_nrsh_structure.ps1
ELXR/: README.md
ELXR/Nourish-Chain-Complete/: project-overview0.md
ELXR/docs/: ARCHITECTURE.md
ELXR/node/: Cargo.toml
ELXR/src/pallet/: Cargo.toml  lib.rs  runtime_api.rs  types.rs  weights.rs
ELXR/telemetry/: Cargo.toml  kombucha_telemetry.rs
NRSH/: Cargo.toml  README.md  harvest-certification.txt  supply-chain-tracking1.txt
NRSH/Nourish-Chain-Complete/: elxr-technical-whitepaper.md  nrsh-technical-whitepaper.md  oracle-price-determination.md
NRSH/docs/: ARCHITECTURE.md  index.md
NRSH/node/: Cargo.toml
NRSH/node/src/: chain_spec.rs  main.rs  service.rs
NRSH/runtime/: Cargo.toml
NRSH/src/: validation.rs
NRSH/telemetry/: Cargo.toml
Nourish-Chain-Complete/: ui-visualization.txt
actor_models/actorx/: actor.rs  context.rs  error.rs  lib.rs  message.rs  organize_parachain_files.ps1
contracts/supply-chain/: tracking.rs
contracts/verification/: harvest-certification.rs  nutrient-verification.rs
databases/: Setup-MSYS2.ps1  db_core.lua  default.nix  ennereal-scene-blueprint.txt  ennereal-scene-blueprint2.txt  ennereal-unreal-implementation.txt  futures_util-1413c47f999b85d2.d  harvesting-makeup-mix-research.md  libark_serialize-55613633df472bcb.rlib  libark_serialize-55613633df472bcb.rmeta  libark_std-364675a66b943fea.rlib  libautocfg-4c553e8d349b1ef3.rlib  libdigest-2d6f4b5b36f431ac.rmeta  libfutures_task-861b3cad653b7ebf.rlib  libfutures_task-861b3cad653b7ebf.rmeta  libnum_cpus-b375fbcc71c9cfa6.rlib  libnum_cpus-f12feeb680d68d3b.rlib  libnum_cpus-f12feeb680d68d3b.rmeta  libpercent_encoding-e44efdc1d323e573.rlib  libpercent_encoding-e44efdc1d323e573.rmeta  libproc_macro_crate-03f013fdf11d6c5b.rmeta  libzeroize-0bb0234518128efa.rmeta  luarocks_config.lua  main.lua  technical-whitepaper.md  types.rs
databases/holographic_db/: HOLOGRAPHIC_DB_DESIGN.md
databases/inverted_index/: inverted_index.lua
databases/key_value/: Setup-DevEnv.ps1  libahash-b1c8e4bb0590d6b8.rlib  libahash-b1c8e4bb0590d6b8.rmeta  libindexmap-7701974b51c08de1.rlib
databases/quantum/: Cargo.toml  HEAD  README.md  actor_token.rs  ao_manager.rs  autocfg-4c553e8d349b1ef3.d  bridge.py  build_script_build-336bb55dcb9912dc.d  build_script_build-630d88eb945eaa63.d  bytes-76d6a9131d3f4eef.d  circuit.rs  circuit_optimizer.rs  default.nix  enhanced-qudit-qutrit-architecture.md  environment.json  error_correction_integration.rs  finalize_parachain_structure.ps1  flake.nix  gemini_client.rs  icu_locid_transform_data-d7fee2352f0f7263.d  icu_properties_data-94e8c7691e9311d7.d  imrt-bga-proposal.md  imrt-economic-model.md  imrt-figma-prototype.md  imrt-infographics.md  imrt-presentation-deck.md  imrt-quantum-computing.md  imrt-treasury.md  imrt-whitepaper-alt.md  imrt-whitepaper.md  index  init.lua  lib.rs  libcfg_if-fb006ed226228755.rlib  libitoa-40a1a00a0556cf25.rlib  libpin_project_lite-7c613690c1e085f3.rlib  libwriteable-5b13ed735c0bfd0a.rlib  master  optimization.rs  oracle-price-determination.md  (+12 more)
databases/vector/: creator-royalty1.txt  dimensional-computation.txt  libaho_corasick-a47d725cf31e07e0.rmeta  libbase64-7d305cfb6df9f46f.rmeta  libblake2b_simd-a31b26b7ec45a32a.rmeta  libbyteorder-31c83b0c9458a4db.rmeta  libbytes-de98823975ab06b1.rlib  libconst_oid-16b18c5cd26f1b6b.rlib  libconst_oid-306de7504f10b816.rlib  libconst_oid-306de7504f10b816.rmeta  libconvert_case-64727a58ee5657d5.rlib  libcrc32fast-eea61b7acad2c59b.rlib  libcrossbeam_utils-cb7b20bd197e2f14.rlib  libcrossbeam_utils-cb7b20bd197e2f14.rmeta  libcurve25519_dalek-def7d57de8add36a.rmeta  libdigest-dd9400b183ab59f7.rmeta  libeither-1dd0410f0901cfb2.rmeta  libform_urlencoded-9f16938f226eaa65.rmeta  (+80 more)
databases/vector/pq/: Cargo.toml  build-script-build-script-build.json  crypto.rs  lib.rs  libahash-9e36388d377c0f85.rmeta  libaho_corasick-87e65f7d241d3762.rlib  libaho_corasick-a47d725cf31e07e0.rlib  libautocfg-78b87bd6af932e8d.rmeta  libbase64-6269c02e6ad9258a.rlib  libbase64-6269c02e6ad9258a.rmeta  libbase64-7d305cfb6df9f46f.rlib  libbs58-34aac9ffe6ce99fe.rmeta  libbyte_slice_cast-716521c55c047287.rlib  libbyte_slice_cast-716521c55c047287.rmeta  libbytes-76d6a9131d3f4eef.rmeta  libbytes-f30cf82d4b26cd0e.rmeta  libcc-e3d5172961fc3a6c.rmeta  libconst_oid-16b18c5cd26f1b6b.rmeta  libconvert_case-64727a58ee5657d5.rmeta  libcrc32fast-eea61b7acad2c59b.rmeta  libfallible_iterator-9fb20d8cedcab019.rmeta  libfunty-f42f174d0c55a0ce.rmeta  libfutures-f3b1953eb976dadc.rmeta  libfutures_core-201f69458818466c.rlib  libfutures_core-9dcfa9d954fd1035.rmeta  libfutures_executor-442b5321f2303f0c.rlib  libfutures_sink-fc693aac9f68957b.rlib  libgeneric_array-91e4740e009f6ad7.rmeta  libgeneric_array-9540b83768dd605e.rlib  libgetrandom-be0816430c79f594.rmeta  libgetrandom-df199f0aca46a423.rlib  libgetrandom-df199f0aca46a423.rmeta  libgetrandom-e63690f54fc0737c.rmeta  libglob-4f16e2bfaf76de61.rmeta  libhashbrown-2d5e1516f9346de1.rmeta  libhashbrown-770b01bf0f38bd17.rlib  libicu_locid_transform_data-d7fee2352f0f7263.rlib  libicu_locid_transform_data-d7fee2352f0f7263.rmeta  libindexmap-05d8ada36cffa3dd.rmeta  libjobserver-2c2511adee5f9c87.rlib  (+65 more)
docs/: GRANT_PROPOSAL.md  integration_summary.md
frontend/leptos-app/: Cargo.toml
frontend/leptos-app/assets/tip_jar/: config.json
frontend/leptos-app/src/: websocket.rs
frontend/leptos-app/src/components/: registry.rs
infrastructure/: README.md
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  main.rs  service.rs
pallets/nrsh/: Cargo.toml
pallets/nrsh/src/: daemonless-oracle1.rs  lib.rs  nutrient-verification1.txt
pitchdeck/: bga-executive-summary.md
runtime/: Cargo.toml
runtime/src/: lib.rs
src/: lib.rs  main.rs
telemetry/: Cargo.toml  spirulina_telemetry.rs
telemetry/src/: lib.rs
(+76 files in other folders)
