[workspace]
members = [
    "node",
    "runtime",
    "pallets/nrsh",
    "telemetry"
]
resolver = "2"

[profile.release]
panic = "unwind"
opt-level = 3

[workspace.dependencies]
frame-system = { version = "4.0.0-dev", default-features = false }
frame-support = { version = "4.0.0-dev", default-features = false }
pallet-balances = { version = "4.0.0-dev", default-features = false }
sp-core = { version = "7.0.0", default-features = false }
sp-runtime = { version = "7.0.0", default-features = false }
