[package]
name = "elixir-telemetry"
version = "0.1.0"
edition = "2021"
authors = ["Elixir Chain Developers"]
description = "Telemetry system for kombucha fermentation monitoring"

[dependencies]
# Substrate and blockchain-related dependencies
sp-core = { version = "6.0.0", optional = true }
sp-runtime = { version = "6.0.0", optional = true }
sp-io = { version = "6.0.0", optional = true }
sp-std = { version = "4.0.0", default-features = false }

# Post-quantum cryptography
pqcrypto-dilithium = { version = "0.4.0", optional = true }
pqcrypto-traits = { version = "0.3.4", optional = true }

# Standard dependencies
serde = { version = "1.0.136", features = ["derive"], optional = true }
serde_json = { version = "1.0.79", optional = true }
chrono = { version = "0.4.19", optional = true }
thiserror = "1.0.30"
log = "0.4.16"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.17.0", features = ["full"] }

[features]
default = ["std"]
std = [
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "sp-std/std",
    "serde",
    "serde_json",
    "chrono",
]
dilithium = ["pqcrypto-dilithium", "pqcrypto-traits"]
production = ["dilithium"]
