[package]
name = "matrix-magiq-matrix-magiq-nrsh-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.0-alpha", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8.0-alpha", features = ["nightly"] }
leptos_router = { version = "0.8.0-alpha", features = ["nightly"] }
leptos_axum = { version = "0.8.0-alpha", optional = true }
server_fn = { version = "0.8.0-alpha", features = ["websocket"] }
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlLinkElement"] }
tailwindcss-leptos = { version = "0.2", optional = true }

[features]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "dep:leptos_axum", "dep:tailwindcss-leptos"]