[package]
name = "security"
version = "0.1.0"
edition = "2021"

[dependencies]
# Cryptography
ring = "0.17"
zeroize = { version = "1.7", features = ["derive"] }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

# Post-Quantum Cryptography
pqcrypto = { version = "0.17", default-features = false }
pqcrypto-traits = "0.3"
pqcrypto-dilithium = "0.5"

# Async Runtime
tokio = { version = "1.28", features = ["rt", "sync"] }

# Error Handling
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
